pkg/lang/testdata/ub/configurations/invalid/quoted-name.ub
configurations: { aws: { 'default': { region: 'x' } } }
